--- a/doc/algorithm/数据结构与算法.md
+++ b/doc/algorithm/数据结构与算法.md
@@ -106,27 +106,60 @@ hash冲突如何解决:
 在redis中为什么要使用跳表而不使用红黑树是因为在区间查询时，树的效率没那么高。
 
 1. 它在链表的基础上加了down指针。从一级索引从链的第一个开始往后找。如果在value命中或在value与next的value之间，则判断是否有down指针。
-2. 如果有down就往下级索引按照上面的方式查找。如果无down指针则代表已经到最底层了，不在value与next的value区间则代表数据不存在
+2. 如果有down就往下级索引按照上面的方式查找。如果无down指针则代表已经到最底层了，不在value或next的value区间则代表数据不存在
 
 实现场景:
-1.使用链表满足查找时间复杂度O(logN)。
+1. 使用链表满足查找时间复杂度O(logN)。
 
 
 
 ### 树
-跳表是通过链表实现，
+跳表是通过链表实现，虽然hash的时间复杂度是O(1),但是它是无序的无法找出区间。由于hash是数组就需要考虑扩容的问题性能差。当hash冲突时演变后的数据不一定比O(logN)快。
+
+几个重要概念:
+1. 几个节点有相同的父节点称为 "兄弟节点"
+2. 没有父节点的称为 "根节点"
+3. 没有子节点的称为 "叶子节点"
+4. 高度是从下到上(从0开始), 深度是从上到下(从0开始)，层是从上到下(从1开始)
+5. 满二叉树是所有的节点都有左右子节点
+6. 完全二叉树———除了最后一层，其他层的节点个数都是满的，最后一层的节点都靠左排列。为了满足数组的存储方式(根据广度优先遍历)
+   * 非完全二叉树，其实会浪费比较多的数组存储空间(要预留空位置给空节点)
+7. 二叉查找树又称为二叉排序树(有顺序才能查找得快)
+8. 堆是完全二叉树
+9. 平衡二叉树(二叉树中任意一个节点的左右子树的高度相差不能大于1)一般用红黑树,因为插入删除的性能更加稳定(近似平衡非严格平衡二叉树)
+   * 根节点是黑色的
+   * 新插入的节点是红色的
+      1. 插入节点的父节点是黑色的则无需处理
+      2. 插入的节点是根节点把它变成黑色
+      3. 如果插入后不满足相邻的两个个节点不能是红色，那就左旋或右旋————类似魔方的公式
+   * 相邻的两个个节点不能是红色 (并不是兄弟节点，而是父子节点相邻)
+   * 所有的叶子节点都是黑色的不存储数据 (为了简化代码实现的)
+   * 从某个节点到所有叶子结点的路径中，黑色节点点数相同
+
+实现场景:
+1. 数据量较大(不能用数组)，有排序要求(不能简单的用链表)，可以选择跳表或树(B+树就是解决树区间查询的问题)
 
 
 
 ### 图
 跳表是通过链表实现，
 
+几个重要概念:
+1. 元素叫做 "顶点"
+2. 一个顶点与其他顶点建立关系叫做 "边" 。 有一种图是边带有权重叫"带权图"用来表示边的权重
+3. 与顶点连接的条数叫做 "度"。 指向这个顶点叫"入度", 从这个顶点指向其他的顶点叫"出度"
+4. 有带箭头的叫做 "有向图" , 无带箭头的叫做 "无向图"
 
-
+领接矩阵: 是一个二维数组，对于无向图来说，顶点i与顶点j有边，则 array【i】【j】 , array【j】【i】  标记为1,无向图则第二个是浪费的。我们存储的是稀疏图，如果微信有好几亿的用户，那么这个图就有好几亿的顶点。但是其实好友关联的不多，就大大浪费了空间
+   * 优势： 简单执行效率高。 —— 可以解决最短路径问题
+   * 缺点： 浪费较大空间。
+领接表: 类似hash方式，每个顶点对应是一条链(可以用跳表，树等数据结构)。用时间换空间
+   * 优势：节省空间
+   * 缺点：执行效率较低，(查找我关注了某些用户非常简单，有哪些用户关注了我就非常困难所以需要逆邻接表) ——关注列表，被关注列表
+   * 存储：哈希算法对数据进行分片存储在不同机器上。
 
 ---
----
-### 数组及链表的对比
+### 几种数据结构的演变
 选择数组
 * 可以申请一块加大的内存空间区域
 * 可以通过偏移量快速定位到某个结点的场景
@@ -137,6 +170,9 @@ hash冲突如何解决:
 * 内存空间有限无法一次性创建一块较大的内存区域
 * 需要循环的功能(如双向链表/双向循环链表)
 
+选择队列或栈
+* 底层可通过数组或链表进行实现。主要根据实际场景先进先出还是先进后出
+
 选择跳表(从头开始)————需要考虑新增及删除时，索引是否添加删除的问题
 * 在链表的基础上有排序插入/查找的功能(二分查找),时间复杂度O(logN)
 * 增加索引层就会带来空间的增加，无需考虑平衡的问题
@@ -145,24 +181,36 @@ hash冲突如何解决:
 * 在链表的基础上有排序插入/查找的功能(二分查找),时间复杂度O(logN)
 * 增加的空间比跳表的小，对空间有部分要求
 
+选择图
+* 需要特殊的使用场景才会用到图。
+
+
 ---
 
 ### 排序
-1. O(N²) 冒泡排序、插入排序、选择排序 
-   1. 冒泡排序:第一层遍历遍历所有元素，第二层确定右变的位置
-      * 每次从第一个元素开始向右对比交换，确保右边一定是比左边大
-   2. 插入排序:
-      * 111
-   3. 选择排序:第一层遍历遍历所有元素，第二层确定左边的位置
-      * 引入min指针,遍历右边找出最小的，遍历完就交换,所以能保证左边一定比右边小
-2. O(logN): 归并排序、快速排序、计数排序
-   1. 归并排序
-   2. 快速排序
-   3. 计数排序
-3. O(N): 基数排序、桶排序 
-   1.
-   2.
+排序需要考虑以下: 
+1. 时间复杂度
+2. 原地排序算法: 空间复杂度是O(1)
+3. 稳定性: 两个相同的值不能发生位置改变
 
+
+1. O(N²) 冒泡排序、插入排序、选择排序 
+   1. 冒泡排序:第一层遍历所有元素，第二层确定右变的位置
+      * 每次从第一个元素开始向右对比交换，确保右边一定是比左边大
+   2. 插入排序: 第一层从第二个遍历所有元素，第二层确定左边的位置
+      * 向左遍历找出比他自己小的，依次向右挪动位置，
+   3. 选择排序:第一层遍历所有元素，第二层确定左边的位置
+      * 引入min指针,遍历右边找出最小的，遍历完就交换,所以能保证左边一定比右边小
+      
+2. O(logN): 归并排序、快速排序 ———— 适用与数据量较大的数据
+   1. 归并排序: 数组从中间分成前后两部分，然后对前后两部分分别排序
+      * 采用递归的方式如果数组个数等于1个返回。否则继续二分递归。把二分递归的结果merge
+   2. 快速排序: 选择p到r之间的任意一个数据作为pivot（分区点）将小于pivot的放到左边，将大于pivot的放到右边，将pivot放到中间
+
+3. O(N): 基数排序、桶排序 、计数排序 ———— 不基于比较的
+   1. 桶排序:  用数组实现，每一个区间值为一个桶，把对应的值放入桶中（有些桶是空的）
+   2. 计数排序: 用数组实现，每一个数值值为一个桶，把对应的值放入桶中（有些桶是空的）
+   3. 基数排序: ，需要可以分割出独立的“位”来比较，而且位之间有递进的关系，如果a数据的高位比b数据大，那剩下的低位就不用比较了
 ---
 
 ### 递归
@@ -177,8 +225,56 @@ hash冲突如何解决:
 
 ---
 
+### 字符串匹配算法
+1. 主串: 就是字符串A
+2. 模式串: 就是字符串B
+>在字符串A中查找字符串B
+
+BF及PK算法：RK是BF的改进版
+   * BF: 暴力算法,拿模式串与主串的位置一对比，匹配不上与主串的位置二对比... ,主串跟模式串中每个byte进行对比(这里是O(m))。  时间复杂度O(n*m)
+   * RK: 拿模式串与主串的位置一对比,匹配不上与主串的位置二对比... ,与截取主串的数据进行hash或生成字符串匹配(这里是O(1))。  时间复杂度O(n)
+BM及KMP算法：
+   * BM: 高效/常用的匹配算法(编辑器查找替换功能),减小匹配的次数,主要的优化点有以下
+     1. 在匹配的过程中是从后往前的
+     2. 匹配的过程中如果发现主串的的值在模式串中不存在，就可以直接往前挪动几位(坏字符规则)
+     3. 匹配的过程中如果发现主串的的值在模式串中存在，一个个挪也有点慢，找出模式串的子串，对比主串就可以往前挪动几位(好后缀)
+   * KMP: 最知名的匹配算法
+     1. 
+      
+Trie树及AC自动机：
+   * Trie树
+   * AC自动机
+   
+---
+
+### 算法思想
+1. 贪心算法: 在满足限制值的情况下，期望值最大。(贪心算法的解决思路是，每次都选择一条跟当前顶点相连的权最小的边，直到找到顶点T。但不是最优)
+2. 分治算法: 将原问题划分成n个规模较小，并且结构与原问题相似的子问题，递归地解决这些子问题，然后再合并其结果，就得到原问题的解
+3. 回溯算法: 一直通过回溯的方法找出最优解（遍历所有的，找出最优）
+4. 动态规划: 有几种方案找出最优的方法
+
+---
+
+排序（快排）
+堆
+红黑树下
+广度优先 ，深度优先算法
+BM及KMP trie树 ac自动机
+
+贪心算法：
+分糖果：   需求小的孩子开始分配糖果。因为满足一个需求大的孩子跟满足一个需求小的孩子，对我们期望值的贡献是一样的。我们每次从剩下的孩子中，找出对糖果大小需求最小的
+钱币找零： 我们希望贡献多的点金额(即金额大的)————尽可能还完钱，使用的纸币最少
+区间覆盖： 
 
 
+分治算法：
+二维平面上有n个点，如何快速计算出两个距离最近的点对？
+有两个n*n的矩阵A，B，如何快速求解两个矩阵的乘积C=A*B？
+
+
+回溯算法: 
+0-1背包：  
+正则表达式
 
 
 
