--- a/doc/algorithm/数据结构与算法.md
+++ b/doc/algorithm/数据结构与算法.md
@@ -137,7 +137,7 @@ hash冲突如何解决:
    * 从某个节点到所有叶子结点的路径中，黑色节点点数相同
 
 实现场景:
-1. 数据量较大(不能用数组)，有排序要求(不能简单的用链表)，可以选择跳表或树(B+树就是解决树区间查询的问题)
+1. 数据量较大(不能用数组)，有排序查找要求(不能简单的用链表)，可以选择跳表或树(B+树就是解决树区间查询的问题)
 
 
 
@@ -150,10 +150,11 @@ hash冲突如何解决:
 3. 与顶点连接的条数叫做 "度"。 指向这个顶点叫"入度", 从这个顶点指向其他的顶点叫"出度"
 4. 有带箭头的叫做 "有向图" , 无带箭头的叫做 "无向图"
 
-领接矩阵: 是一个二维数组，对于无向图来说，顶点i与顶点j有边，则 array【i】【j】 , array【j】【i】  标记为1,无向图则第二个是浪费的。我们存储的是稀疏图，如果微信有好几亿的用户，那么这个图就有好几亿的顶点。但是其实好友关联的不多，就大大浪费了空间
+数据保存方式:
+* 领接矩阵: 是一个二维数组，对于无向图来说，顶点i与顶点j有边，则 array【i】【j】 , array【j】【i】  标记为1,无向图则第二个是浪费的。我们存储的是稀疏图，如果微信有好几亿的用户，那么这个图就有好几亿的顶点。但是其实好友关联的不多，就大大浪费了空间
    * 优势： 简单执行效率高。 —— 可以解决最短路径问题
    * 缺点： 浪费较大空间。
-领接表: 类似hash方式，每个顶点对应是一条链(可以用跳表，树等数据结构)。用时间换空间
+* 领接表: 类似hash方式，每个顶点对应是一条链(可以用跳表，树等数据结构)。用时间换空间
    * 优势：节省空间
    * 缺点：执行效率较低，(查找我关注了某些用户非常简单，有哪些用户关注了我就非常困难所以需要逆邻接表) ——关注列表，被关注列表
    * 存储：哈希算法对数据进行分片存储在不同机器上。
@@ -194,20 +195,20 @@ hash冲突如何解决:
 3. 稳定性: 两个相同的值不能发生位置改变
 
 
-1. O(N²) 冒泡排序、插入排序、选择排序 
+* O(N²) 冒泡排序、插入排序、选择排序 
    1. 冒泡排序:第一层遍历所有元素，第二层确定右变的位置
       * 每次从第一个元素开始向右对比交换，确保右边一定是比左边大
    2. 插入排序: 第一层从第二个遍历所有元素，第二层确定左边的位置
       * 向左遍历找出比他自己小的，依次向右挪动位置，
    3. 选择排序:第一层遍历所有元素，第二层确定左边的位置
       * 引入min指针,遍历右边找出最小的，遍历完就交换,所以能保证左边一定比右边小
-      
-2. O(logN): 归并排序、快速排序 ———— 适用与数据量较大的数据
+
+* O(logN): 归并排序、快速排序 ———— 适用与数据量较大的数据
    1. 归并排序: 数组从中间分成前后两部分，然后对前后两部分分别排序
       * 采用递归的方式如果数组个数等于1个返回。否则继续二分递归。把二分递归的结果merge
    2. 快速排序: 选择p到r之间的任意一个数据作为pivot（分区点）将小于pivot的放到左边，将大于pivot的放到右边，将pivot放到中间
 
-3. O(N): 基数排序、桶排序 、计数排序 ———— 不基于比较的
+* O(N): 基数排序、桶排序 、计数排序 ———— 不基于比较的
    1. 桶排序:  用数组实现，每一个区间值为一个桶，把对应的值放入桶中（有些桶是空的）
    2. 计数排序: 用数组实现，每一个数值值为一个桶，把对应的值放入桶中（有些桶是空的）
    3. 基数排序: ，需要可以分割出独立的“位”来比较，而且位之间有递进的关系，如果a数据的高位比b数据大，那剩下的低位就不用比较了
