--- a/doc/db/分库分表.md
+++ b/doc/db/分库分表.md
@@ -70,6 +70,8 @@ medoo:
 
 * go GORM
 ```
+//================================= 基础 =======================================
+
 const (
 	Customer = "zby_customer"
 )
@@ -79,13 +81,14 @@ func pTableName(table string, partitionKey int32) string {
 	return table + "_part_1"
 }
 
+//================================= 业务 =======================================
+
 type User struct {
 	MerchantId int32
 	Name       string
 	Id         int
 }
 
-//========================================================================
 
 // 插入
 func TestCreate(t *testing.T) {
@@ -204,8 +207,8 @@ $users = $db->getItems("*",["AND" => ["id" => 1]]); // SELECT * FROM `zby_user` 
 
 ### 旧数据处理
 整个数据跑完可能需要几个小时系统不能停机升级。所以需要提前创建及跑部分数据。由于白天繁忙时间不可大规模写数据所以需要提前一天或几天。代码上线后，在把接下来没跑完的数据跑完，
-zby_stock_change_log 的xxx时间为开始跑数据的时间
-zby_stock_check_record 的xxx时间可能需要提前一个月或更长的时间（盘点一般不会修改到一个月之前的数据）
+* zby_stock_change_log 的xxx时间为开始跑数据的时间
+* zby_stock_check_record 的xxx时间可能需要提前一个月或更长的时间（盘点一般不会修改到一个月之前的数据）
 
 只增不改zby_stock_change_log
 ```
