--- a/doc/db/分表分区.md
+++ b/doc/db/分表分区.md
@@ -1,8 +1,8 @@
-### 提升大规模数据库查询性能的关键策略
+### 数据库大表拆分
 当表的数据量超过一定规模（例如2000万行）时，由于B+树的层级增加，查询数据时会进行更多次的磁盘随机读取操作，从而增加了查询时间并导致响应速度变慢。这是因为随着数据量的增加，B+树的高度会相应增长，每次查询需要访问更多的节点，而这些节点可能存储在不同的磁盘位置，导致更多的磁盘I/O操作。优化此问题的方法包括但不限于使用分区表、增加索引缓存、优化查询、垂直或水平分割数据等。
 
 分表和分区在数据库优化中具有重要意义，尤其是在处理大规模数据时有显著的效果
-* 提高查询性能（当指定了分区键后查询到的数据只在对应的表/分区查询）
+* 提高查询性能（当指定了分区键后查询到的数据只在对应的表/分区查询，减少扫描行）
 * 行锁及表锁的影响（当对数据加锁时由于数据存放在不同的表/分区中，加锁只会在对应的区域进行加锁）
 * 提高并行能力（由于是多个逻辑存储上，可以充分利用cpu的多核处理能力）
 
@@ -71,16 +71,28 @@ medoo:
 * go GORM
 ```
 //================================= 基础 =======================================
-
 const (
 	Customer = "zby_customer"
 )
 
-func pTableName(table string, partitionKey int32) string {
-	//分表逻辑TODO
-	return table + "_part_1"
+//区间
+func partition(partitionKey int32) int32 {
+	switch {
+	case partitionKey <= 500:
+		return 1
+	case partitionKey <= 1000:
+		return 2
+	case partitionKey <= 1500:
+		return 3
+	case partitionKey <= 2000:
+		return 4
+	default:
+		return 5
+	}
 }
-
+func pTableName(table string, partitionKey int32) string {
+	return fmt.Sprintf("%s_part_%d",table,partition(partitionKey))
+}
 //================================= 业务 =======================================
 
 type User struct {
