--- a/doc/algorithm/数据结构与算法.md
+++ b/doc/algorithm/数据结构与算法.md
@@ -125,7 +125,7 @@ hash冲突如何解决:
 6. 完全二叉树———除了最后一层，其他层的节点个数都是满的，最后一层的节点都靠左排列。为了满足数组的存储方式(根据广度优先遍历)
    * 非完全二叉树，其实会浪费比较多的数组存储空间(要预留空位置给空节点)
 7. 二叉查找树又称为二叉排序树(有顺序才能查找得快)
-8. 堆是完全二叉树
+8. 堆是完全二叉树(最小堆: 父节点的值小于或等于子节点的值，而两个子节点之间的大小关系并不重要)为了满足数组的存储方式
 9. 平衡二叉树(二叉树中任意一个节点的左右子树的高度相差不能大于1)一般用红黑树,因为插入删除的性能更加稳定(近似平衡非严格平衡二叉树)
    * 根节点是黑色的
    * 新插入的节点是红色的
@@ -137,7 +137,7 @@ hash冲突如何解决:
    * 从某个节点到所有叶子结点的路径中，黑色节点点数相同
 
 实现场景:
-1. 数据量较大(不能用数组)，有排序查找要求(不能简单的用链表)，可以选择跳表或树(B+树就是解决树区间查询的问题)
+1. 数据量较大(不能用数组)，有排序查找要求(不能简单的用链表)，可以选择跳表或树(B+树就是解决树叶子节点区间查询的问题)
 
 
 
