--- a/doc/db/分表分区.md
+++ b/doc/db/分表分区.md
@@ -9,7 +9,9 @@
 
 ### 分表分区
 #### 分表
-* 优势: 提高了数据的灵活性，可以根据不同的规则把数据存放到对应的地方。避免减少其他因素而影响到数据的准确性
+* 优势: 提高了数据的灵活性，可以根据不同的规则把数据存放到对应的地方。避免减少其他因素而影响到数据的准确性。当查询没有share key时优势会更加明显
+  1. 查询多个分表可以通过并发的方式获取后处理（分表数量越大性能越明显）
+  2. 由于应用层是无状态的可以横向扩展多个节点，把这部分的消耗资源从mysql(有状态不易横向扩展)转移出来，提高mysql的可用性
 * 劣势: 需要单独维护数据的存放位置。对表新增/修改字段时需要维护多个表。查询数据时需要确定在哪个表后才能进行查询。
 
 #### 分区
@@ -22,7 +24,7 @@
 2. 列表分区（List Partitioning）：根据指定的列值列表将数据行分配到不同的分区。每个分区包含一组特定列值的数据行。 
 3. 哈希分区（Hash Partitioning）：使用哈希函数将数据行分配到不同的分区。这种分区类型适用于需要均匀分布数据的场景。 
 4. 键分区（Key Partitioning）：根据指定的列或列集合的值将数据行分配到不同的分区。每个分区包含一组特定值的数据行
-
+当查询没有share key时，分区是通过多个表查询后在mysql进行合并处理，这样会降低mysql的高可用
 
 
 ### 分区实现
