--- a/doc/db/锁.md
+++ b/doc/db/锁.md
@@ -36,8 +36,8 @@ select ENGINE_TRANSACTION_ID,THREAD_ID,EVENT_ID,OBJECT_NAME,INDEX_NAME,OBJECT_IN
 
 
 —— 查看锁信息（8.0版本之前）
-select * from information_schema.innodb_locks; // 查看锁信息
-select * from information_schema.innodb_lock_waits; // 查看死锁信息
+select * from information_schema.innodb_locks; 
+select * from information_schema.innodb_lock_waits; 
 ```
 
 performance_schema.data_locks重要字段:
@@ -65,7 +65,7 @@ performance_schema.data_locks重要字段:
    * SELECT c FROM t WHERE c > 15 and c < 20 for share; 由于不需要回表且不修改数据，则索引c会加锁，索引PRIMARY不加锁（注意这里是for share，如果for update主键索引则需要加锁）
 
 意向锁与锁之间的关系
-![img.png](lock.png)
+![img.png](pic/lock.png)
 
 ## 死锁回滚
 死锁回滚是找回滚消耗最容易的事务
@@ -80,6 +80,7 @@ SHOW VARIABLES LIKE 'innodb_lock_wait_timeout';
 SHOW VARIABLES LIKE 'innodb_%deadlock%';
 ```
 
-
+死锁避免方式
+1. 更新数据时两个事务更新的顺序不一致，那么如果两个事务先排序后更新会减少冲突(最多就锁等待)
 
 
