--- a/doc/db/分库及分布式数据库.md
+++ b/doc/db/分库及分布式数据库.md
@@ -37,10 +37,10 @@
 2. 事务问题是最难解决的（sql改写对比起来会简单得多）靠应用程序代码来实现
 同步:(强一致性)
    * 两阶段提交: 所有节点执行本地事务后不马上提交等待，则到都成功才则提交，否则回滚。
-      * 由于需要等待所有节点才能提交所以会导致 __阻塞等待__ 性能较差
-      * 当有实例不满足条件时，此时的 __回滚__ 操作的开销就会非常的大
-      * 一致性有问题第一个提交成功了，第二个还在提交，此时有读请求，__这时读到1提交的，2提交前的（脏读）__ ————应用层是否看重或在应用层判断
-      * 有可能当提交时发现部分提交失败(磁盘满了binlog写失败)。导致部分提交部分交失败，__提交成功无法回滚__。
+      * 由于需要等待所有节点才能提交所以会导致`阻塞等待`性能较差
+      * 当有实例不满足条件时，此时的 `回滚`操作的开销就会非常的大
+      * 一致性有问题第一个提交成功了，第二个还在提交，此时有读请求，`这时读到1提交的，2提交前的（脏读）` ————应用层是否看重或在应用层判断
+      * 有可能当提交时发现部分提交失败(磁盘满了binlog写失败)。导致部分提交部分交失败，`提交成功无法回滚`。
       * 两阶段提交数据一致性的两个前提
         1. 假设提交阶段是可靠的(提交阶段无法回滚的结果，所以消耗尽可能短)
         2. 假设网络分区、机器崩溃或者其他原因而导致失联的节点最终能够恢复(由于在准备阶段已经写入了完整的重做日志，所以当失联机器一旦恢复，就能够从日志中找出已准备妥当但并未提交的事务数据，再向协调者查询该事务的状态，确定下一步应该进行提交还是回滚操作。)
@@ -60,9 +60,9 @@
      * 子事务跟补偿动作都是幂等的，他们是满足交换律
    
 异步:(最终一致性)
-   * 本地消息表(被动): 本地事务提交后，发送消息到消息表，消息表由 __定时任务__ 轮训去处理消息，处理成功后更新本地事务状态为成功。如果处理失败则更新本地事务状态为失败。
+   * 本地消息表(被动): 本地事务提交后，发送消息到消息表，消息表由`定时任务`轮训去处理消息，处理成功后更新本地事务状态为成功。如果处理失败则更新本地事务状态为失败。
      * 由于需要定时任务去处理消息，延迟性会差一点，而且需要定时任务去轮训查询是否有未处理完的消息。
-   * MQ方案(主动): 本地事务提交后，发送消息到 __MQ__，MQ接收消息处理成功后更新本地事务状态为成功。如果处理失败则更新本地事务状态为失败。
+   * MQ方案(主动): 本地事务提交后，发送消息到`MQ`，MQ接收消息处理成功后更新本地事务状态为成功。如果处理失败则更新本地事务状态为失败。
      * 需要考虑消息丢失的问题及MQ重复消息的问题(可以通过定时任务来弥补消息丢失问题，同时幂等操作可通过分布式锁及数据id/version/status等方式解决)
 
 
@@ -91,13 +91,13 @@ ACID与CAP理论
 跨库事务的方案
 1. proxy方案(适用写多同时有share key情况): 修改sql
    * 广播表（小表），更新是更新到每个库，每次更新都广播到各个实例
-   * __涉及到多实例处理时需要改写sql__
+   * `涉及到多实例处理时需要改写sql`
    * 查询/更新各个实例的数据在proxy层汇总处理或某台实例汇总处理
    * 一致性读的问题通过GTMS方案解决
 2. raft方案(适用查多写少): 
    * 节点会通过raft算法同步其他节点的部分数据(该方案无主备集群。把备数据放到其他节点上)
    * 查询时如果当前节点有全部的数据则可直接查找返回，如果无其他数据可向其他节点获取后再本地合并(temporary table)
-   * __更新数据时，多半同意机制（如果小于一半回滚的开销也很大）__
+   * `更新数据时，多半同意机制（如果小于一半回滚的开销也很大）`
    * 一致性读的问题通过GTMS方案解决
 3. 存算分离方案:
    * 所有实现在引擎层处理这个需要看各个云商家的处理
