--- a/doc/db/锁.md
+++ b/doc/db/锁.md
@@ -48,7 +48,7 @@ performance_schema.data_locks重要字段:
   * 相同LOCK_TYPE
   * 同个page上 (代表同个索引树，同时数据在同一个page页上)
 * LOCK_TYPE: 锁类型(TABLE, RECORD)
-* __LOCK_MODEL__: 锁模式
+* `LOCK_MODEL`: 锁模式
   * TABLE: IS意向读锁,IX意向写锁
   * RECORD:
     * 部分1: I读锁,X写锁
