--- a/doc/db/锁.md
+++ b/doc/db/锁.md
@@ -80,7 +80,9 @@ SHOW VARIABLES LIKE 'innodb_lock_wait_timeout';
 SHOW VARIABLES LIKE 'innodb_%deadlock%';
 ```
 
-死锁避免方式
+## 死锁避免方式
 1. 更新数据时两个事务更新的顺序不一致，那么如果两个事务先排序后更新会减少冲突(最多就锁等待)
 
 
+## 45讲内容回顾
+#TODO
