--- a/doc/db/分库及分布式数据库.md
+++ b/doc/db/分库及分布式数据库.md
@@ -101,6 +101,7 @@ ACID与CAP理论
    * 一致性读的问题通过GTMS方案解决
 3. 存算分离方案:
    * 所有实现在引擎层处理这个需要看各个云商家的处理
+   * 由于是存算分离，那么在server层可能有多个，此时写操作命中A服务，其他BCD..等的buffer_pool可能命中不到
 
 
 ## 腾讯云TDSQL
