--- a/doc/db/2.应用/1.锁.md
+++ b/doc/db/2.应用/1.锁.md
@@ -65,7 +65,7 @@ performance_schema.data_locks重要字段:
    * SELECT c FROM t WHERE c > 15 and c < 20 for share; 由于不需要回表且不修改数据，则索引c会加锁，索引PRIMARY不加锁（注意这里是for share，如果for update主键索引则需要加锁）
 
 意向锁与锁之间的关系
-![img.png](pic/lock.png)
+![img.png](../pic/lock.png)
 
 ## 死锁回滚
 死锁回滚是找回滚消耗最容易的事务
