--- a/doc/db/2.分库及分布式数据库.md
+++ b/doc/db/2.分库及分布式数据库.md
@@ -50,14 +50,34 @@
      * 将事务管理器（TM）独立成单独的组件(proxy类似)，协调事务的提交或回滚。
    * GTMS全局事务管理器:
      * 一个唯一递增的id生成器，可以生成全局事务id，可以保证每个节点的事务id是唯一的（在事务开启前SET GTID_NEXT = '12345678-1234-1234-1234-123456789012:1'; ）。
-   * TCC: confirm及cancel需要考虑幂等行为（用户代码层面实现2PC）——如阿里的Seata完成
+   * TCC: confirm及cancel需要考虑幂等行为（用户代码层面实现2PC）——如阿里的`Seata`完成
      * try阶段先把数据进行预留锁定，预留锁定成功后执行本地事务
      * 然后执行confirm阶段，把预留锁定释放掉，更新到新的业务数据中
      * 如执行cancel阶段，把预留锁定的数据还原之前的业务数据中
-   * SAGA： 数据补偿来代替回滚（用户代码层面实现数据库回滚，可能会脏写需要加锁）——如阿里的Seata完成
+   * SAGA： 数据补偿来代替回滚（`用户代码层面`实现数据库回滚，可能会脏写需要加锁）——如阿里的`Seata`完成
      * 把一个大事务分解为可以交错运行的一系列子事务的集合。
      * 每个子事务都有对应的补偿动作（恢复原数据的sql）。
      * 子事务跟补偿动作都是幂等的，他们是满足交换律
+     * 执行时在数据库是以提交的方式进行避免数据库锁及死锁的问题，回滚时是通过另外语句进行回滚。所以中间就会导致脏写及脏读问题
+   * AT： 数据补偿来代替回滚（在`代理层`根据sql会生成undo log的sql用于回滚，由于是代理生成所以SQL兼容性可能会差，可能会脏写需要加锁）——如阿里的`Seata`完成
+       * 与SAGA相同，只是生成的回滚sql是由代理层实现，SQL兼容性差但是对回滚透明
+
+XA事务
+```SQL
+-- 启动XA事务
+XA START 'xxxxxx11111';
+UPDATE `server` SET `group` = "ari" WHERE `group` = "a";
+-- 结束XA事务分支
+XA END 'xxxxxx11111';
+-- 准备XA事务
+XA PREPARE 'xxxxxx11111';
+
+-- 回滚XA事务
+XA ROLLBACK 'xxxxxx11111';
+-- 提交XA事务
+XA COMMIT 'xxxxxx11111';
+```
+      
    
 异步:(最终一致性)
    * 本地消息表(被动): 本地事务提交后，发送消息到消息表，消息表由`定时任务`轮训去处理消息，处理成功后更新本地事务状态为成功。如果处理失败则更新本地事务状态为失败。
