--- a/doc/db/3.分库分表/2.分库及分布式数据库.md
+++ b/doc/db/3.分库分表/2.分库及分布式数据库.md
@@ -15,7 +15,7 @@
 3. 磁盘问题: 数据量已经达到了几T甚至更大，维护一个较大的磁盘开销较大。
 4. IO性能差: 进行频繁的读写操作IO需要等待。
 
-分表的解决方式就是把数据拆成N个实例。每个实例只存放一部分数据
+分库的解决方式就是把数据拆成N个实例。每个实例只存放一部分数据
 1. 内存总体是加大的同时命中率值会比较正常(无需频繁淘汰)。
 2. cup的影响面只是影响当前实例，同时由于分开可能cpu数值会变低
 3. 磁盘问题因为数据较小恢复及备份等都可以以较短
@@ -87,8 +87,70 @@ XA COMMIT 'xxxxxx11111';
 
 
 
-### 分布式数据库
-探讨什么是分布式数据库
+---
+## 分布式数据库的定义
+写多读少，事务，高可用，分布式，高并发，海量存储
+
+### 一致性
+`事务一致性`
+* `ACID` 常规关系型数据库 
+  * C一致性是目的  A原子性 C隔离性 D持久性 是手段 ———C隔离性是最难的
+  * C隔离性使用MVCC进行,通过undo Log进行回滚查看，事务提交后如果不需要会进行清除
+* `BASE` 分布式数据库  
+  * BA基本可用性  S数据处理中可能各个节点看到的不一致  E最终一致性
+
+`数据一致性`(多个副本数据一致性)     
+  * 强一致：所有的副本都返回成功才算成功 （性能差,可用性差）
+  * 弱一致：最终一致性
+    1. 写副本A然后读副本B   (B落后A——使用写读同个副本解决)
+    2. 读副本B后读副本A   (B落后A——使用同个设备/人同个副本解决)
+    3. 写副本A然后写副本B,读副本C时顺序错乱 (两个主，同步的顺序——使用全局时钟解决)
+
+
+### 分布式数据库的类型·
+* `Agent`: 在Agent(协调节点)进行转发，SQL重写,多节点的查询，多节点联表，多节点事务，多节点数据汇总排序等
+* `NewSQL`: 原生数据库，基础是NoSQL(分片，Paxos/Raft共识,LSM-Tree等)
+  * 支持`动态分片`，可以根据分片的请求压力切换到不同的节点上保证节点之间的负载是均衡的。 同时可以把事务内的控制在同一个节点上。
+  * 有单独的`元数据集群`进行保存，同时通过同步协议进行同步
+  * 由于是NewSQL重新实现了数据库的内部逻辑，所以在OLTP上进行了扩展`HATP`两个存储结构引擎（混合OLAP分析及OLTP事务系统）——Agent这一点就无法实现只能通过ETL方式
+    * OLTP 使用行式存储  （写快，单行读快 多行读慢）
+    * OLAP 使用列式存储/全文检索等  （写慢(需要写多个数据页-使用LSM-Tree来优化)，单行读慢，同列多行快）
+
+### 分布式数据库局限
+* 不使用存储过程（移植性差，调试难）——数据在多个节点及分片原因存储过程会变得更加复杂(不常用所以产商不深挖)
+* 不使用自增主键 (唯一性，单调递增 都不能满足) ——  分布式生成需要考虑中心化分配id问题（高并发性能影响）
+  * 雪花算法：     
+    1. 局部有序(随机的高位(前51位)使得数据在分片中分布更加均衡，避免尾部效应)
+    2. 分散分布式数据库id生成压力(解决单点瓶颈及锁)  
+    3. 当使用range分片时会导致数据某个分区压力过大(雪花算法前面的机器码可以分散到其他分片)
+       * 数据库定义为BIGINT: 1位符号位(固定为0)  41位时间戳(毫秒)  10位机器码(最大1024个机器)  12位序列号(最大1毫秒生成4096个id)
+  * UUID：
+    1. 无序性(避免分布式数据库单点压力大的问题)
+    2. 索引效率低(单分片下无序导致性能较差)
+
+### 计算与存储分离优化方案（计算节点与存储节点之间没有无效的数据）
+* `计算下推`到存储节点
+    * TiDB采用“缓存写提交”则将写的SQL缓存起来，直到事务提交再一起发到存储节点。即在同个事务中执行insert后执行select时，insert还没有到存储节点。后续改进为将数据节点跟本地缓存进行merge合并得到真实数据(与刷脏页逻辑相同)
+* `分区键`
+    * 可以根据分区间下推到各个存储节点，同时多表关联也是使用相同的下推方式。以确保数据移动最少
+* `索引`
+    * 全局索引： 全局索引是为了检验唯一索引的值是否有冲突(如果去各个分区索引去查找效率较差)，但是维护这个全局索引需要加上分布式锁等代价
+    * 分区索引： 索引是为了可以快速的查找对应的数据是否满足而不用遍历全部进行查询，当分区的数据分裂合并时对应的分区索引也要发生改变
+* `JOIN下推`
+    * 大表关联`小表`
+        1. 静态(每次更新时各个节点都处理)：定义为每个节点都有的广播表，执行join时大表所在节点join小表
+        2. 动态(有需要时再同步到广播到各个节点)：执行时把小表的数据广播到每个对应的节点，执行join时大表所在节点join小表
+    * 大表关联`大表`
+        1. 重分布： 在多个节点上做本地关联合并
+            * 关联时如果指定了A的分区键，没有B的分区键，那么把B的数据推送到A的各个分片上进行本地管理(明确了A的所在的分区，把B的数据推送到A上面去)
+            * 关联时如果都不是AB表的分区键，则将A跟B的数据推送到各个节点（所有节点都有A跟B的数据，所有节点联表后，到统一去重）
+* `LSM-Tree`
+    *
+    * level
+* `Raft`
+
+    
+### 探讨是是不是分布式数据库
 1. 是否分布式了
 2. 是否能满足ACID
 
@@ -106,7 +168,7 @@ ACID与CAP理论
 * 由于分布式存在多副本的问题那就引出CAP理论，CP:强一致性(关系型数据库)  AP:最终一致性(NOSQL数据库)
   * P分区容忍性: 当部分节点因网络原因而彼此失联系统仍能正确地提供服务的能力
   * C一致性: 任何时刻、任何分布式节点中，我们所看到的数据都是没有矛盾的（因网络原因同步不完成，需等到全部同步完才能提供服务）
-  * P可用性: 任何时刻都能访问到分布式中的数据（可以牺牲一致性，因网络原因同步不完成，依旧可以提供服务只是数据时旧数据）
+  * A可用性: 任何时刻都能访问到分布式中的数据（可以牺牲一致性，因网络原因同步不完成，依旧可以提供服务只是数据时旧数据）
 
 跨库事务的方案
 1. proxy方案(适用写多同时有share key情况): 修改sql
