--- a/doc/db/3.分库分表/2.分库及分布式数据库.md
+++ b/doc/db/3.分库分表/2.分库及分布式数据库.md
@@ -10,20 +10,20 @@
    * 故障恢复时间(数据量少恢复数据快)
 
 ### 总结
+遇到需要分库的问题：
 1. 内存问题: 由于查询时我们希望命中索引或buffer pool中能有这份数据尽可能不需要去磁盘里面查找。同时不用频繁的淘汰buffer pool中的数据。
 2. cpu问题: 由于涉及到计算、连表join、group等操作可以需要很大的计算操作，同时可能会影响到其他正常的sql语句
 3. 磁盘问题: 数据量已经达到了几T甚至更大，维护一个较大的磁盘开销较大。
 4. IO性能差: 进行频繁的读写操作IO需要等待。
 
-分库的解决方式就是把数据拆成N个实例。每个实例只存放一部分数据
+分库的解决方式就是把数据拆成N个实例。每个实例只存放一部分数据：
 1. 内存总体是加大的同时命中率值会比较正常(无需频繁淘汰)。
 2. cup的影响面只是影响当前实例，同时由于分开可能cpu数值会变低
 3. 磁盘问题因为数据较小恢复及备份等都可以以较短
 4. IO操作也就没那么频繁
 
 ### 可能遇到的问题
-由于数据库拆成多个实例问题：
-1. 处理方案:
+#### 如何实现:
    * connector方案————客户端自己sql改写:
      1. 客户端需要连接多个实例，在客户端判断需要在哪个库哪个表处理(选择库及改写sql)
      2. 同时如果某个数据库实例发生了主备切换的时候，各个客户端需要同时更新(避免A客户端在主备切换时，客户端B对已经不可用的主库写数据)————dba解决方案：把主库改为readOnly，切换成功后新主库取消readOnly,切换过程无法写入数据
@@ -34,8 +34,8 @@
      3. 多实例事务问题
      4. sql改写兼容性问题
      
-2. 事务问题是最难解决的（sql改写对比起来会简单得多）靠应用程序代码来实现
-同步:(强一致性)
+#### 事务问题
+同步处理:(强一致性)
    * 两阶段提交: 所有节点执行本地事务后不马上提交等待，则到都成功才则提交，否则回滚。
       * 由于需要等待所有节点才能提交所以会导致`阻塞等待`性能较差
       * 当有实例不满足条件时，此时的 `回滚`操作的开销就会非常的大
@@ -45,7 +45,7 @@
         1. 假设提交阶段是可靠的(提交阶段无法回滚的结果，所以消耗尽可能短)
         2. 假设网络分区、机器崩溃或者其他原因而导致失联的节点最终能够恢复(由于在准备阶段已经写入了完整的重做日志，所以当失联机器一旦恢复，就能够从日志中找出已准备妥当但并未提交的事务数据，再向协调者查询该事务的状态，确定下一步应该进行提交还是回滚操作。)
    * 三阶段提交: 三阶段提交是对两阶段提交的改进，先对需要操作的资源先查出判断是否允许进行操作(减少不必要的事务回滚)，如果可以在执行后续的2PC
-      * 与两阶段提交相同的问题，只是在CanCommit阶段会提前判断是否满足再开始事务去执行，避免不必要的回滚。同时提前访问对应的参与者可以提前检查是否因网络问题导致不可用而回滚
+      * 与两阶段提交相同的问题，只是在CanCommit阶段会提前判断是否满足再开始事务去执行，避免不必要地回滚。同时提前访问对应的参与者可以提前检查是否因网络问题导致不可用而回滚
    * XA事务:使用两阶段提交的方式。协调者被拆成两个部分，应用（AP）和 事务管理器（TM）.
      * 将事务管理器（TM）独立成单独的组件(proxy类似)，协调事务的提交或回滚。
    * GTMS全局事务管理器:
@@ -79,7 +79,7 @@ XA COMMIT 'xxxxxx11111';
 ```
       
    
-异步:(最终一致性)
+异步处理:(最终一致性)
    * 本地消息表(被动): 本地事务提交后，发送消息到消息表，消息表由`定时任务`轮训去处理消息，处理成功后更新本地事务状态为成功。如果处理失败则更新本地事务状态为失败。
      * 由于需要定时任务去处理消息，延迟性会差一点，而且需要定时任务去轮训查询是否有未处理完的消息。
    * MQ方案(主动): 本地事务提交后，发送消息到`MQ`，MQ接收消息处理成功后更新本地事务状态为成功。如果处理失败则更新本地事务状态为失败。
@@ -88,18 +88,23 @@ XA COMMIT 'xxxxxx11111';
 
 
 ---
-## 分布式数据库的定义
+## 分布式数据库
 写多读少，事务，高可用，分布式，高并发，海量存储
 
 ### 一致性
-`事务一致性`
+#### 事务一致性
 * `ACID` 常规关系型数据库 
-  * C一致性是目的  A原子性 C隔离性 D持久性 是手段 ———C隔离性是最难的
-  * C隔离性使用MVCC进行,通过undo Log进行回滚查看，事务提交后如果不需要会进行清除
+  * Consistency一致性是目的  Atomic原子性 Isolation隔离性 Durability持久性 是手段 ———C隔离性是最难的
+  * Consistency隔离性使用MVCC进行,通过undo Log进行回滚查看，事务提交后如果不需要会进行清除
 * `BASE` 分布式数据库  
   * BA基本可用性  S数据处理中可能各个节点看到的不一致  E最终一致性
+* `CAP` 分布式理论(由于分布式存在多副本的问题那就引出CAP理论，CP:强一致性(牺牲高可用)  AP:最终一致性(牺牲一致性))
+    * P分区容忍性: 当部分节点因网络原因而彼此失联系统仍能正确地提供服务的能力
+    * C一致性: 任何时刻、任何分布式节点中，我们所看到的数据都是没有矛盾的（因网络原因同步不完成，需等到全部同步完才能提供服务）
+    * A可用性: 任何时刻都能访问到分布式中的数据（可以牺牲一致性，因网络原因同步不完成，依旧可以提供服务只是数据时旧数据）
+  
 
-`数据一致性`(多个副本数据一致性)     
+#### 数据一致性 (多个副本数据一致性)     
   * 强一致：所有的副本都返回成功才算成功 （性能差,可用性差）
   * 弱一致：最终一致性
     1. 写副本A然后读副本B   (B落后A——使用写读同个副本解决)
@@ -117,8 +122,8 @@ XA COMMIT 'xxxxxx11111';
     * OLAP 使用列式存储/全文检索等  （写慢(需要写多个数据页-使用LSM-Tree来优化)，单行读慢，同列多行快）
 
 ### 分布式数据库局限
-* 不使用存储过程（移植性差，调试难）——数据在多个节点及分片原因存储过程会变得更加复杂(不常用所以产商不深挖)
-* 不使用自增主键 (唯一性，单调递增 都不能满足) ——  分布式生成需要考虑中心化分配id问题（高并发性能影响）
+* 不使用`存储过程`（移植性差，调试难）——数据在多个节点及分片原因存储过程会变得更加复杂(不常用所以产商不深挖)
+* 不使用`自增主键` (唯一性，单调递增 都不能满足) ——  分布式生成需要考虑中心化分配id问题（高并发性能影响）
   * 雪花算法：     
     1. 局部有序(随机的高位(前51位)使得数据在分片中分布更加均衡，避免尾部效应)
     2. 分散分布式数据库id生成压力(解决单点瓶颈及锁)  
@@ -135,7 +140,7 @@ XA COMMIT 'xxxxxx11111';
     * 可以根据分区间下推到各个存储节点，同时多表关联也是使用相同的下推方式。以确保数据移动最少
 * `索引`
     * 全局索引： 全局索引是为了检验唯一索引的值是否有冲突(如果去各个分区索引去查找效率较差)，但是维护这个全局索引需要加上分布式锁等代价
-    * 分区索引： 索引是为了可以快速的查找对应的数据是否满足而不用遍历全部进行查询，当分区的数据分裂合并时对应的分区索引也要发生改变
+    * 分区索引： 索引是为了可以快速地查找对应的数据是否满足而不用遍历全部进行查询，当分区的数据分裂合并时对应的分区索引也要发生改变
 * `JOIN下推`
     * 大表关联`小表`
         1. 静态(每次更新时各个节点都处理)：定义为每个节点都有的广播表，执行join时大表所在节点join小表
@@ -149,28 +154,20 @@ XA COMMIT 'xxxxxx11111';
     * level
 * `Raft`
 
-    
-### 探讨是是不是分布式数据库
-1. 是否分布式了
-2. 是否能满足ACID
+---
 
+## 公有云分布式数据库
 上云后觉得这些就应该让云厂商去做。让专业的人做效率及准确性更高。目前云厂商给出的方案:
 1. shared nothing: 方案最成熟，各个节点处理自己的事，处理跨节点事务
 2. raft同步: 需要同步，更新半数同意原则（最贴近分布式去中心化的思想，但是节点越多raft同步的效率越差,该方案也可以去掉proxy层请求可内部转发）
 3. 存算分离: 优势扩展时只需增加server节点，不用考虑数据节点
 
-ACID与CAP理论
-* 传统数据库应该满足ACID(AID是手段，C是目的)
-  * Atomic: 原子性 
-  * Isolation: 隔离性
-  * Durability: 持久性
-  * Consistency: 一致性
-* 由于分布式存在多副本的问题那就引出CAP理论，CP:强一致性(关系型数据库)  AP:最终一致性(NOSQL数据库)
-  * P分区容忍性: 当部分节点因网络原因而彼此失联系统仍能正确地提供服务的能力
-  * C一致性: 任何时刻、任何分布式节点中，我们所看到的数据都是没有矛盾的（因网络原因同步不完成，需等到全部同步完才能提供服务）
-  * A可用性: 任何时刻都能访问到分布式中的数据（可以牺牲一致性，因网络原因同步不完成，依旧可以提供服务只是数据时旧数据）
+探讨是是不是分布式数据库
+1. 是否分布式了
+2. 是否能满足ACID
 
-跨库事务的方案
+
+### 跨库事务的方案
 1. proxy方案(适用写多同时有share key情况): 修改sql
    * 广播表（小表），更新是更新到每个库，每次更新都广播到各个实例
    * `涉及到多实例处理时需要改写sql`
@@ -182,8 +179,41 @@ ACID与CAP理论
    * `更新数据时，多半同意机制（如果小于一半回滚的开销也很大）`
    * 一致性读的问题通过GTMS方案解决
 3. 存算分离方案:
-   * 所有实现在引擎层处理这个需要看各个云商家的处理
+   * 所有实现在引擎层处理这个需要看云商家的处理
    * 由于是存算分离，那么在server层可能有多个，此时写操作命中A服务，其他BCD..等的buffer_pool可能命中不到
+ 
+---
+
+## 分布式一致算法
+在软件系统中为了保证数据可用不丢失就需要通过多台备份机制进行保存。由于保存的是一份随时变动的数据。所以数据同步需要深入思考。
+* 状态转移:  所有节点保存真实数据值，依赖对快照或完整数据副本的同步
+* 操作转移:  需要确保每个节点以相同的顺序执行操作(所有节点初始值是一样的状态，执行命令序列后，最终的状态一定一致)
+
+网络分区的现象是无法消除的，所以无法追求所有节点任何时候状态一致，采用少数服从多数的原则(n/2+1)。让网络分区，机器崩溃等原因不影响正常写入，恢复后可追上数据一致。
+
+### Paxos算法
+分为三个节点
+* 提案节点: 提出对某个值的操作节点
+* 决策节点:  应答提案节点参与投票，接受或反对
+* 记录节点:  不参与决策(一般是从网络分区恢复中数据还没跟上同步的节点)
+
+分布式数据一致性的复杂度，主要下面的因素影响
+* 由于网络问题可能导致延迟，同时多节点并发问题，如果不等待/加锁加载顺序不一致导致数据最终不一致。但如果加锁在锁释放前发生崩溃失联导致后续操作阻塞。
+* 由于网络问题可能丢失
+
+#### 提案流程
+* 准备阶段： 如果提案节点发出提案，必须向所有决策节点广播申请许可。会发一个全局唯一的id为提案号(递增)。格式是Prepare(id,value),广播所有决策节点。
+    1. 两个承诺：承诺不会再`接受`提案id小于或等于的`准备请求`。承诺不在`批准`小于n的`批准请求` （站在决策节点的角度明确自己是最新的才允许去参与投票）
+        * 如果再接收到小于或等于的准备请求(别人提案节点网络不好)
+        * 如果再接收到小于的批准请求(自己决策节点网络不好， 因为有新的提案请求代表之前的批准流程已经结束)
+    2. 一个应答：回复提案节点批准过最大的提案id及值(本地无传空)。如果收到的id不是决策节点最大的则不会理会这个准备请求
+        * 如果提案节点等到超时时间还没有超过 n/2 +1 的人答复则重新发起新的提案(提案递增)，超时次数到达时则认为提案失败
+
+* 批准阶段:
+    1.  提案节点发现所有响应的节点返回的值是空，代表自己是第一个设置值的节点，可以随意改，发起Accept(id,value)再次广播全部的决策的节点, 每一个决策节点收到Accept后返回应答
+    2. 如果Prepare(id,value)返回响应的中有值，必须无条件从应答中找到提案最大的id对应的值，发起Accept(maxAcceptID,maxAcceptValue)，再次广播全部的决策的节点, 如果接收到的Accept是自己最大则同意，就会认为Prepare(id,value)的值是可以批准的。则返回应答
+    3. 如果提案节点等到超时时间还没有超过 n/2 +1 的人答复则重新发起新的提案，超时次数到达时则认为提案失败
 
 
-## 腾讯云TDSQL
+由于Paxos提案方式符合保持数据一致性，但是提案的顺序保证需要通过其他方案解决
+* leader-based poxos
