--- a/doc/db/3.分库分表/2.分库及分布式数据库.md
+++ b/doc/db/3.分库分表/2.分库及分布式数据库.md
@@ -150,10 +150,16 @@ XA COMMIT 'xxxxxx11111';
             * 关联时如果指定了A的分区键，没有B的分区键，那么把B的数据推送到A的各个分片上进行本地管理(明确了A的所在的分区，把B的数据推送到A上面去)
             * 关联时如果都不是AB表的分区键，则将A跟B的数据推送到各个节点（所有节点都有A跟B的数据，所有节点联表后，到统一去重）
 * `LSM-Tree`
-    *
+    * 分布式30将重整理
     * level
 * `Raft`
-
+    * 由于Raft一致性算法需要半数节点应答才能算成功，同时是由主提案节点进行提案，所以不适合用写多的场景。
+    * 当Mysql主从同步设置为半同步时确实会比Raft性能强，但只有设置了半同步的那节点数据一致性，其他异步的就不能保证一致性
+    * 当Mysql主从同步设置为全同步时需要全部从节点确认后才能提交，Raft则是过半可减少一半的时间
+    * Mysql从节点宕机后恢复，可根据`GTID`和`binlog`进行恢复（由于`binlog`有过期删除机制,如果获取到的binlog已经不存在(错误日志会报错)，则需要通过加载全量备份后再增量binlog恢复）
+    * Raft从节点宕机后恢复，会判断日志差距大小，如果过大则会发送快照。 如果小于阈值会发送日志同步
+    * Raft一致性算法跟Mysql的同步机制都是各有优点，分布式系统一致性优先所以一般会使用Raft，OLTP是性能优先所以使用主从同步
+    * Mysql是性能优先(OLTP不使用Raft的原因)，Raft是一致性优先。
 ---
 
 ## 公有云分布式数据库
@@ -214,6 +220,24 @@ XA COMMIT 'xxxxxx11111';
     2. 如果Prepare(id,value)返回响应的中有值，必须无条件从应答中找到提案最大的id对应的值，发起Accept(maxAcceptID,maxAcceptValue)，再次广播全部的决策的节点, 如果接收到的Accept是自己最大则同意，就会认为Prepare(id,value)的值是可以批准的。则返回应答
     3. 如果提案节点等到超时时间还没有超过 n/2 +1 的人答复则重新发起新的提案，超时次数到达时则认为提案失败
 
+### Multi Paxos算法
+通过增加`选主`的过程
+1. 提案节点通过定时轮训(心跳)，确定当前网络所有节点是否存在一个`主提案节点`
+2. 如果没有会通过提案，批准两轮网络交互选出`主提案节点`(即享所有节点广播希望自己竞选主节点的请求，如果得到多数批准则选主成功）
+   * 前提: 1.超半节点认同无主提案节点  2.提案靠前的节点成功主的可能性更强(需要符合两个承诺，不在接受小于或等于N的准备请求，不再接受小于N的批准请求)
 
-由于Paxos提案方式符合保持数据一致性，但是提案的顺序保证需要通过其他方案解决
-* leader-based poxos
+提案方式变为无并发的有序操作
+1. 只有主节点才能提案
+2. 跟随节点收到提案后会转发到主节点由主节点提案
+
+### Raft算法
+Raft 是 Multi-Paxos 的一种变体，其设计目标是简化并更易于实现 Multi-Paxos，同时解决实际应用中的一些复杂性问题。
+* 网络分区后恢复后的处理
+  1. 选出主提案节点
+  2. 每个节点会比较它的日志条目与其他节点的日志条目
+  3. 如果某个节点的日志条目与新选出的领导者的日志不一致，领导者会要求该节点回滚到一个共同的日志点，并从该点重新同步日志
+  4. 最终只会有一个分区的日志被保留，其他分区的日志会被删除（领导者会比较两个日志条目，并通过`日志回滚`和`重同步`确保一致性。如果分区2的节点数较多，那么`日志条目B`会被保留，分区1中的节点会回滚并同步日志。）
+
+### Gossip算法
+这是一个最终一致性算法。通过`流传病算法`方式
+1. 只是随机广播相邻连接的几个节点，然后再以此类推广播相邻连接的几个节点直到全部的节点都收到了数据
