--- a/doc/db/3.分库分表/1.分表分区.md
+++ b/doc/db/3.分库分表/1.分表分区.md
@@ -1,3 +1,16 @@
+## 目录
+
+- [数据库大表拆分](#数据库大表拆分)
+  - [分表分区](#分表分区)
+    - [分表](#分表)
+    - [分区](#分区)
+    - [分区与分表的选择](#分区与分表的选择)
+  - [分区实现](#分区实现)
+    - [检查分区情况](#检查分区情况)
+  - [分表实现](#分表实现)
+    - [代码实现](#代码实现)
+---
+
 ### 数据库大表拆分
 当表的数据量超过一定规模（例如2000万行）时，由于B+树的层级增加，查询数据时会进行更多次的磁盘随机读取操作，从而增加了查询时间并导致响应速度变慢。这是因为随着数据量的增加，B+树的高度会相应增长，每次查询需要访问更多的节点，而这些节点可能存储在不同的磁盘位置，导致更多的磁盘I/O操作。优化此问题的方法包括但不限于使用分区表、增加索引缓存、优化查询、垂直或水平分割数据等。
 
