--- a/doc/db/3.分库分表/2.分库及分布式数据库.md
+++ b/doc/db/3.分库分表/2.分库及分布式数据库.md
@@ -1,3 +1,26 @@
+## 目录
+- [什么情况下需要分库](#什么情况下需要分库)
+- [总结](#总结)
+- [可能遇到的问题](#可能遇到的问题)
+  - [如何实现](#如何实现)
+  - [事务问题](#事务问题)
+- [分布式数据库](#分布式数据库)
+  - [一致性](#一致性)
+    - [事务一致性](#事务一致性)
+    - [数据一致性](#数据一致性)
+  - [分布式数据库的类型](#分布式数据库的类型)
+  - [分布式数据库局限](#分布式数据库局限)
+  - [计算与存储分离优化方案](#计算与存储分离优化方案)
+- [公有云分布式数据库](#公有云分布式数据库)
+  - [跨库事务的方案](#跨库事务的方案)
+- [分布式一致算法](#分布式一致算法)
+  - [Paxos算法](#Paxos算法)
+    - [Multi Paxos算法](#Multi Paxos算法)
+  - [Raft算法](#Raft算法)
+  - [Gossip算法](#Gossip算法)
+
+---
+
 ### 什么情况下需要分库
 单表数据量大查询索引执行效率差的问题可以通过分区或分表的方式进行解决，分库更多是单一个库已经无法支撑需要进行扩展为几个实例。同时提高系统的可扩展性和可用性
 * 单台服务器资源不足
@@ -104,15 +127,16 @@ XA COMMIT 'xxxxxx11111';
     * A可用性: 任何时刻都能访问到分布式中的数据（可以牺牲一致性，因网络原因同步不完成，依旧可以提供服务只是数据时旧数据）
   
 
-#### 数据一致性 (多个副本数据一致性)     
-  * 强一致：所有的副本都返回成功才算成功 （性能差,可用性差）
-  * 弱一致：最终一致性
-    1. 写副本A然后读副本B   (B落后A——使用写读同个副本解决)
-    2. 读副本B后读副本A   (B落后A——使用同个设备/人同个副本解决)
-    3. 写副本A然后写副本B,读副本C时顺序错乱 (两个主，同步的顺序——使用全局时钟解决)
+#### 数据一致性
+多个副本数据一致性)    
+* 强一致：所有的副本都返回成功才算成功 （性能差,可用性差）
+* 弱一致：最终一致性
+  1. 写副本A然后读副本B   (B落后A——使用写读同个副本解决)
+  2. 读副本B后读副本A   (B落后A——使用同个设备/人同个副本解决)
+  3. 写副本A然后写副本B,读副本C时顺序错乱 (两个主，同步的顺序——使用全局时钟解决)
 
 
-### 分布式数据库的类型·
+### 分布式数据库的类型
 * `Agent`: 在Agent(协调节点)进行转发，SQL重写,多节点的查询，多节点联表，多节点事务，多节点数据汇总排序等
 * `NewSQL`: 原生数据库，基础是NoSQL(分片，Paxos/Raft共识,LSM-Tree等)
   * 支持`动态分片`，可以根据分片的请求压力切换到不同的节点上保证节点之间的负载是均衡的。 同时可以把事务内的控制在同一个节点上。
@@ -133,7 +157,8 @@ XA COMMIT 'xxxxxx11111';
     1. 无序性(避免分布式数据库单点压力大的问题)
     2. 索引效率低(单分片下无序导致性能较差)
 
-### 计算与存储分离优化方案（计算节点与存储节点之间没有无效的数据）
+### 计算与存储分离优化方案
+计算节点与存储节点之间没有无效的数据
 * `计算下推`到存储节点
     * TiDB采用“缓存写提交”则将写的SQL缓存起来，直到事务提交再一起发到存储节点。即在同个事务中执行insert后执行select时，insert还没有到存储节点。后续改进为将数据节点跟本地缓存进行merge合并得到真实数据(与刷脏页逻辑相同)
 * `分区键`
