--- a/doc/db/3.分库分表/3.读写分离.md
+++ b/doc/db/3.分库分表/3.读写分离.md
@@ -1,3 +1,12 @@
+## 目录
+- [读写分离](#读写分离)
+- [读写分离实现的方式](#读写分离实现的方式)
+- [读写分离的问题](#读写分离的问题)
+- [sql流程解析](#sql流程解析)
+- [腾讯云读写分离](#腾讯云读写分离)
+
+--- 
+
 ## 读写分离
 * 当单台服务的资源不足时(io 内存等),单机性能可以满足无需分库，可以通过读写分离来提高服务的吞吐量，读写分离的原理是主从复制，主库负责写，从库负责读，主库写完数据后，会同步到从库，从库再把数据提供给客户端。
 * 当一些大查询时可以不影响到主库，可以通过读读节点进行获取
