--- a/doc/db/1.基础/1.日志.md
+++ b/doc/db/1.基础/1.日志.md
@@ -4,8 +4,8 @@
 3. undo log 是事务回滚的日志，数据变动时会直接修改buffer pool中的数据，但是由于事务还未提交，如果事务回滚或MVCC需要通过undo log进行找回
 
 ### 日志的作用
-1. 确保数据不丢失，保证数据的一致性 redo log
-2. 数据恢复和复制的保障 binlog
+1. 确保数据不丢失，保证数据的一致性 redo log (保证innodb层数据)
+2. 数据恢复和复制的保障 binlog （保证mysql集群数据）
 3. 顺序写入提高性能 redo log（需要借助buffer pool进行，因为数据有序写入无序，在内存中合并排序后才某个时间点写入data页）
 4. MVCC数据回滚 undo log
 
