--- a/doc/db/1.基础/2.日志.md
+++ b/doc/db/1.基础/2.日志.md
@@ -1,13 +1,26 @@
 ### 日志
-1. binlog 是server层用于主从同步的
-2. redo log 是innodb层的用于避免频繁些的问题，redo log 需要结合buffer pool一起使用
-3. undo log 是事务回滚的日志，数据变动时会直接修改buffer pool中的数据，但是由于事务还未提交，如果事务回滚或MVCC需要通过undo log进行找回
+1. binlog 是`server层`用于主从同步、归档、数据重放、备份恢复
+2. redo log 是`innodb层`的用于避免频繁写的问题，redo log 需要结合buffer pool一起使用(WAL)
+3. undo log 是`事务回滚`的日志，数据变动时会直接修改buffer pool中的数据，但是由于事务还未提交，如果事务回滚或MVCC需要通过undo log进行找回
 
 ### 日志的作用
 1. 确保数据不丢失，保证数据的一致性 redo log (保证innodb层数据)
 2. 数据恢复和复制的保障 binlog （保证mysql集群数据）
 3. 顺序写入提高性能 redo log（需要借助buffer pool进行，因为数据有序写入无序，在内存中合并排序后才某个时间点写入data页）
 4. MVCC数据回滚 undo log
+
+
+### redo log 补充
+redo log是`环形结构`。在满足一下条件就会进行刷脏页。这个是非常影响服务器性能：
+1. `空闲`的时候会进行checkpoint进行脏页处理
+2. `redo log 空间满了`需要腾出空间进行脏页处理
+3. 内存数据不足需要淘汰部分页。
+4. 正常关闭
+
+write pos 跟 checkpoint关系
+1. write pos 是当前redo log写到哪里的坐标
+2. checkpoint 是当前刷脏页的坐标
+3. checkpoint到write pos 之间的距离就是脏页未处理到磁盘的数据
 
 
 ### buffer 
@@ -22,6 +35,7 @@
 4. 事务提交时会提交redo log，同时生成binlog。同时这里属于两阶段提交
 5. 如果事务回滚时会通过undo log日志对 buffer pool进行回滚操作。
 
+
 ### MVCC
 1. 由于开启事务会分配一个事务id，同时会记录此时最后已经提交的事务id。读写需要对事务id进行判断
 2. 写操作时对buffer pool进行判断
@@ -29,7 +43,7 @@
         1. 可以继续修改，此时会记录生成redo log 及 undo log。此时会对buffer pool进行修改
     * 不是自己修改的
         1. 判断是不是事务最后已提交的事务id，如果是代表期间没人修改，可以进行修改。此时会记录生成redo log 及 undo log。此时会对buffer pool进行修改
-        2. 此时阻塞等待修改当前行的事务提交
+        2. 此时`阻塞等待`修改当前行的事务提交
 3. 读操作时对buffer pool进行判断 （由于buffer pool只保存了最终的数据，尽管事务可能还未提交的数据，如果不是自己或事务开启时最后的已提交事务id，那么代表中间有变动，都需要通过undo log反向回滚找回）
     * 是自己修改的、
         1. 如果是代表是最新的，返回该行数据
